--- a/src/style/_menu.scss
+++ b/src/style/_menu.scss
@@ -67,6 +67,7 @@
     align-items:  flex-end;
     justify-content: space-between !important;
     visibility: hidden;
+    z-index: 99 !important;
 }
 
 .menu-tab{
